update first background

--- a/index.html
+++ b/index.html
@@ -8,29 +8,7 @@
 </head>
 <body>
 	<div id="header">
-		<img src="img/logo_esteli_solidarite.gif" width="20px"></img>
-		<!--<h1>
-			<span>
-				<a style="color:#7da315;">E</a>
-				<a style="color:#1e8bb4;">s</a>
-				<a style="color:#d0a525;">t</a>
-				<a style="color:#af1e83;">e</a>
-				<a style="color:#c86c1f;">l</a>
-				<a style="color:#1e8bb4;">i</a>
-			</span>&nbsp;&nbsp;
-			<span>
-				<a style="color:#7da315;">S</a>
-				<a style="color:#1e8bb4;">o</a>
-				<a style="color:#d0a525;">l</a>
-				<a style="color:#af1e83;">i</a>
-				<a style="color:#c86c1f;">d</a>
-				<a style="color:#1e8bb4;">a</a>
-				<a style="color:#7da315;">r</a>
-				<a style="color:#1e8bb4;">i</a>
-				<a style="color:#d0a525;">t</a>
-				<a style="color:#af1e83;">&eacute;</a>
-			</span>
-		</h1>-->
+		<a><img src="img/logo_esteli_solidarite.gif" width="20px"></img></a>
 		<a href="#home">Home</a>
 		<a href="#presentation">Pr&eacute;sentation</a>
 		<a href="#nos-actions">Nos actions</a>
@@ -41,8 +19,13 @@
 	<section id="backgroundHome"></section>
 	<div id="home"></div><br/>
 	<fieldset class="pagecontent" id="field_home">
-		<div id="logoHome"><img src="img/logo_esteli_solidarite.gif"></img></div>
-		<div id="textHome"><b>Esteli Solidarit&eacute;</b>, une association d'aide au <b>Nicaragua</b></div>
+		<img id="img_background" src="img/DSC_0061-2.jpg" />
+		<div id="logoHome">
+			<img src="img/logo_esteli_solidarite.gif"></img>
+		</div>
+		<div id="textHome">
+			<b>Esteli Solidarit&eacute;</b>, une association d'aide au <b>Nicaragua</b>
+		</div>
 	</fieldset>
 	<section id="backgroundPres"></section>
 	<div id="presentation"></div>
