--- a/index.html
+++ b/index.html
@@ -20,11 +20,13 @@
 	<div id="home"></div><br/>
 	<fieldset class="pagecontent" id="field_home">
 		<img id="img_background" src="img/DSC_0061-2.jpg" />
-		<div id="logoHome">
-			<img src="img/logo_esteli_solidarite.gif"></img>
-		</div>
-		<div id="textHome">
-			<b>Esteli Solidarit&eacute;</b>, une association d'aide au <b>Nicaragua</b>
+		<div id="texthome">
+			<div id="logoHome">
+				<img src="img/logo_esteli_solidarite.gif"></img>
+			</div>
+			<div id="textHome">
+				<b>Esteli Solidarit&eacute;</b>, une association d'aide au <b>Nicaragua</b>
+			</div>
 		</div>
 	</fieldset>
 	<section id="backgroundPres"></section>
